# gen-orb-mcp

./: .gitignore  AI_DILIGENCE.md  CLAUDE.md  Cargo.toml  PRLOG.md  deny.toml  gen-circleci-orb.toml  gen-orb-mcp.toml  justfile  renovate.json  sonar-project.properties
.cargo/: audit.toml
.circleci/: config.yml  orb-release.yml  release.yml  update_prlog.yml
crates/gen-orb-mcp/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release-hook.sh  release.toml
crates/gen-orb-mcp/src/: conformance_rule.rs  lib.rs  main.rs
crates/gen-orb-mcp/src/consumer_parser/: error.rs  graph.rs  mod.rs  types.rs
crates/gen-orb-mcp/src/differ/: heuristics.rs  mod.rs
crates/gen-orb-mcp/src/generator/: context.rs  error.rs  mod.rs  templates.rs
crates/gen-orb-mcp/src/migrator/: applicator.rs  mod.rs  planner.rs  reporter.rs  types.rs
crates/gen-orb-mcp/src/parser/: error.rs  mod.rs  types.rs
crates/gen-orb-mcp/src/primer/: mod.rs
crates/gen-orb-mcp/templates/: Cargo.toml.hbs  current_mod.rs.hbs  lib.rs.hbs  main.rs.hbs  version_module.rs.hbs  versions_mod.rs.hbs
crates/gen-orb-mcp/tests/: generated_compilation.rs
docs/: ARCHITECTURE.md  CIRCLECI_INTEGRATION_PLAN.md  CIRCLECI_README.md  CIRCLECI_SETUP_GUIDE.md  CI_INTEGRATION_GUIDE.md  FINALIZED_PLAN.md  IMPLEMENTATION_PLAN.md  NEXT_PHASE_PLAN.md  OPEN_SOURCE_PLAN.md  ORB_AUTHOR_RENAME_GUIDE.md  QUICKSTART.md  ROADMAP.md  circleci-config.yml  circleci-release.yml
docs/archive/: circleci-config.yml  circleci-release.yml
migrations/: 0.1.30.json  0.2.0.json
orb/: Dockerfile
orb/src/: @orb.yml
orb/src/commands/: build.yml  diff.yml  generate.yml  migrate.yml  prime.yml  publish.yml  save.yml  set_https_remote.yml  validate.yml
orb/src/examples/: example.yml
orb/src/executors/: default.yml
orb/src/jobs/: build.yml  build_mcp_server.yml  diff.yml  generate.yml  migrate.yml  prime.yml  publish.yml  save.yml  validate.yml
orb/src/scripts/: add-workspace-to-path.sh  build.sh  build_mcp_server_set_up_git_and_environment.sh  diff.sh  generate.sh  migrate.sh  prime.sh  publish.sh  save.sh  set_https_remote.sh  validate.sh
prior-versions/: 0.1.11.yml  0.1.12.yml  0.1.13.yml  0.1.14.yml  0.1.15.yml  0.1.16.yml  0.1.17.yml  0.1.18.yml  0.1.19.yml  0.1.20.yml  0.1.21.yml  0.1.22.yml  0.1.23.yml  0.1.24.yml  0.1.25.yml  0.1.26.yml  0.1.27.yml  0.1.28.yml  0.1.29.yml  0.1.30.yml  0.1.31.yml  0.1.32.yml  0.1.33.yml  0.1.34.yml  0.1.35.yml  0.1.36.yml  0.1.37.yml  0.1.38.yml  0.1.39.yml  0.1.40.yml  0.1.41.yml  0.1.42.yml  0.1.43.yml  0.1.44.yml  0.1.45.yml  0.1.46.yml  0.1.47.yml  0.1.48.yml  0.1.49.yml  0.1.50.yml  (+3 more)
scripts/: release-prlog.sh
