[workspace]
members = ["crates/gen-orb-mcp"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerus-org/gen-orb-mcp"
rust-version = "1.87"
keywords = ["mcp", "circleci", "orb", "codegen"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# MCP Protocol
pmcp = "2.6.0"

# YAML Processing
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Error Handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Async Runtime
tokio = { version = "1.52.1", features = ["full"] }

# Template Engine
handlebars = "6.4.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-log = "0.2.0"

# Date/time — for --since cutoff calculation
chrono = { version = "0.4.44", features = ["std"], default-features = false }

# Semantic versioning — for --earliest-version comparison and version sorting
semver = "1.0.28"

# GitHub REST API — typed access for publish subcommand
octocrate = { version = "2.2.0", default-features = false, features = [
    "repos",
    "file-body",
    "rustls-tls",
] }

# Git operations — staging, committing, pushing for the save subcommand
git2 = "0.20.4"
git2_credentials = "0.15.0"

# Signed commit and GitHub App token push (for save --sign)
pcu = "0.6.21"
config = { version = "0.15.23", default-features = false }

# Testing
tempfile = "3.27.0"
trycmd = "1.2.0"
criterion = "0.8.2"
