[workspace]
members = ["crates/gen-orb-mcp"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerus-org/gen-orb-mcp"
rust-version = "1.91"
keywords = ["mcp", "circleci", "orb", "codegen"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# MCP Protocol
pmcp = "2.15.0"

# YAML Processing
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Error Handling
anyhow = "1.0.103"
thiserror = "2.0.18"

# Async Runtime
tokio = { version = "1.52.3", features = ["full"] }

# Template Engine
handlebars = "6.4.2"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-log = "0.2.0"

# Date/time — for --since cutoff calculation
chrono = { version = "0.4.45", features = ["std"], default-features = false }

# Semantic versioning — for --earliest-version comparison and version sorting
semver = "1.0.28"

# GitHub REST API — typed access for publish subcommand
octocrate = { version = "2.2.0", default-features = false, features = [
    "repos",
    "file-body",
    "rustls-tls",
] }

# Git operations — staging, committing, pushing for the save subcommand
# git2 0.21 changed its default features to `[]` (0.20 defaulted to
# ["ssh", "https"]). Without `https`, libgit2 is built with no TLS backend and
# `save`'s git push fails at runtime ("there is no TLS stream available").
# Enable them explicitly; `ssh` keeps SSH remotes working too.
git2 = { version = "0.21.0", features = ["ssh", "https"] }
git2_credentials = "0.16.0"

# Signed commit and GitHub App token push (for save --sign).
# Needs pcu >= 0.6.22 for SignConfig::with_identity + with_signing_key.
pcu = "0.6.28"
config = { version = "0.15.25", default-features = false, features = ["toml"] }

# Testing
tempfile = "3.27.0"
trycmd = "1.2.0"
criterion = "0.8.2"
